syntax = "proto3";

package protocol;

option go_package = "github.com/annel0/mmo-game/internal/protocol";

// Запрос на аутентификацию
message AuthRequest {
  string username = 1;
  optional string password = 2;
  optional string token = 3;
}

// Ответ на аутентификацию
message AuthResponse {
  bool success = 1;
  string message = 2;
  uint64 player_id = 3;
  string token = 4;
  string world_name = 5;
} 