syntax = "proto3";

package protocol;

option go_package = "github.com/annel0/mmo-game/internal/protocol";

import "internal/protocol/proto/common.proto";

// Запрос на обновление блока
message BlockUpdateRequest {
  Vec2 position = 1;
  uint32 block_id = 2;
  JsonMetadata metadata = 3; // JSON метаданные для блока
  string action = 4; // Тип действия с блоком (mine, use, place, и т.д.)
}

// Ответ на обновление блока
message BlockUpdateResponse {
  bool success = 1;
  string message = 2;
  uint32 block_id = 3;
  Vec2 position = 4;
  JsonMetadata metadata = 5; // JSON метаданные для блока
  repeated string effects = 6; // Эффекты, связанные с обновлением блока
}

// Данные о блоке
message BlockData {
  Vec2 position = 1;
  uint32 block_id = 2;
  JsonMetadata metadata = 3; // JSON метаданные для блока
  repeated string effects = 4; // Визуальные эффекты
}

// Сообщение с обновлениями блоков
message BlockUpdateMessage {
  repeated BlockData blocks = 1;
} 